--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,3 @@
 <center>
-<img src="spook-single.png" style="width:600px; image-rendering:pixelated; margin-right: 50%;" onerror="this.src='git.gif';" class="contented">
+<img src="spook-single.png" style="width:600px; image-rendering:pixelated;" onerror="this.src='git.gif';" class="contented">
 </center>
