--- a/main.html
+++ b/main.html
@@ -49,17 +49,17 @@
 	</section>	  
 </head>
   <body>
-    <header>
-  <!--<img src="jag.jpg" style="width:30%;">-->
-  <a href="home.html">Home</a> 
-  <a href="favorite.html">Favorites</a> 
-  <a href="discover.html">Discovery</a> 
-  <a href="settings.html">settings</a> 
-  <a href="support.html">Support</a> 
-  <a href="info.html">info</a>
-  <img src="dashboard.png" style="width:60px; image-rendering:pixelated; margin-right: 90%;" onerror="this.src='git.gif';" class="contented">
-      <br>
-    </header>
+<header>
+    <div class="nav-links">
+        <a href="home.html">Home</a>
+        <a href="favorite.html">Favorites</a>
+        <a href="discover.html">Discovery</a>
+        <a href="settings.html">Settings</a>
+        <a href="support.html">Support</a>
+        <a href="info.html">Info</a>
+    </div>
+    <img src="dashboard.png" alt="Dashboard" onerror="this.src='git.gif';" />
+</header>
 	  <marquee style="background-color:rgba(0, 0, 0, 0.5); color:white;">
 ////////////////////////S//E//A//R//C//H//E//N//G//I//N//E/////T//O//M//O//R//R//O//W/////////////////////////////////////////////////////////////////////////////
 	  </marquee>
