--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> 
-  <title>[ Early Access/beta tester ]</title>
+  <title>[ Early Access ]</title>
   <link rel="icon" href="untitled.png" />
     <title></title>
   </head>
