--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
     </script>
     	<!-- LOADING SCREEN BY @WilardzySenpai 03- -->
         <div class="preloader">
-        <div class="counter">0</div>
+        <div class="counter"></div>
 		<div class="loading-text" id="loading-text">
 		</div> 
 		
