--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
   <head> 
   <title>Jouyuss</title>
-  <link rel="icon" href="git.gif" />
+  <link rel="icon" href="yorokobi.png" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/themes.css" />
   <meta name="author" content="untitled by waterl3mon">
