--- a/main.html
+++ b/main.html
@@ -147,7 +147,7 @@
       </div>
 		
       
-      <div class="FIX">
+      <div class="ok">
         <a href="library/monkeymart/index.html" >
        <img src="library/monkeymart/monkeymart.png" onerror="this.src='replace.png';" class="contented" />
           <h3>Monkey Mart</h3>
@@ -292,8 +292,8 @@
       </div>
 		
       <div class="ok">
-        <a href="library/eagler.1.8.8/index.html" >
-       <img src="library/eagler.1.8.8/eagler.png" onerror="this.src='git.gif';" class="contented" />
+        <a href="library/eaglercraft/index.html" >
+       <img src="library/eaglercraft/eagler.png" onerror="this.src='git.gif';" class="contented" />
           <h3>EaglerCraft 1.8.8</h3>
           <p>By Lax1dude Continued by ayunami2000</p>
         </a>
