--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="yorokobi.png" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/themes.css" />
-  <meta name="author" content="untitled by waterl3mon">
+  <meta name="author" content="unBlumgid by waterl3mon">
   <meta name="keywords" content="fun, stratagem, github, waterlemon">
         <!--thanks to @WilardzySenpai-->
     <link rel="stylesheet" href="css/loading-screen.css" />
@@ -500,7 +500,7 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>BlumgiBall</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -508,14 +508,14 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>		
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -523,14 +523,14 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>		
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -538,14 +538,14 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>		
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -553,7 +553,7 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>		
@@ -561,7 +561,7 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -569,7 +569,7 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -577,7 +577,7 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -585,14 +585,14 @@
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
 		<div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>		
@@ -603,7 +603,7 @@
 	  <div id="content" class="contented">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='replace.png';" class="contented" />
-          <h3>Title</h3>
+          <h3>Blumgi</h3>
           <p>Made by</p>
         </a>
       </div>
