--- a/main.html
+++ b/main.html
@@ -620,5 +620,11 @@
   <a href="socials.html">Socials</a> 
   <a href="versions.html">version V0.0.3</a>
 </footer>
+	    <script>
+    // Always scroll to the top on refresh/reload
+    window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    };
+  </script>
   </body>
 </html>
