--- a/main.html
+++ b/main.html
@@ -611,7 +611,7 @@
       -->
       
     </div>
-	  	    <button id="toTopBtn">⬆ Top</button>
+<button id="toTopBtn">⬆ Top</button>
 <footer>
   <a href="sources.html">sources</a> 
   <a href="contributors.html">contribute</a> 
@@ -620,7 +620,8 @@
   <a href="socials.html">Socials</a> 
   <a href="versions.html">version V0.0.3</a>
 </footer>
-	    <script>
+
+  <script>
     const toTopBtn = document.getElementById("toTopBtn");
 
     // Show button when scrolled down 200px
@@ -632,7 +633,7 @@
       }
     };
 
-    // When clicked, scroll smoothly to top
+    // Scroll smoothly to top on click
     toTopBtn.onclick = function () {
       window.scrollTo({
         top: 0,
@@ -640,6 +641,7 @@
       });
     };
   </script>
+	  
 	    <script>
     // Always scroll to the top on refresh/reload
     window.onbeforeunload = function () {
