--- a/main.html
+++ b/main.html
@@ -103,17 +103,11 @@ function searchGames() {
   </div>
 
 <!-- Dashboard Image -->
-<div class="dashboard">
-  <img src="dashboard.png" alt="Dashboard" onerror="this.src='git.gif';" onclick="toggleMenu()" />
-  
-  <!-- Hidden dropdown menu -->
-  <div id="dashboardMenu" class="dropdown-menu">
-    <a href="pages.html">📂 Pages</a>
-    <a href="settings.html">⚙ Settings</a>
-    <a href="info.html">ℹ Info</a>
-    <a href="support.html">💬 Support</a>
-  </div>
-</div>
+<!-- Dashboard Icon -->
+<img src="dashboard.png" alt="Dashboard" 
+     onerror="this.src='git.gif';" 
+     id="dashboardBtn" />
+
 </header>
 
 	  <marquee style="background-color:rgba(0, 0, 0, 0.5); color:white;">
@@ -677,6 +671,16 @@ function searchGames() {
   <a href="versions.html">version V0.0.3</a>
 </footer>
 
+<!-- Fixed Dashboard Menu -->
+<div id="dashboardMenu" class="dashboard-menu">
+  <a href="pages.html">📂 Pages</a>
+  <a href="settings.html">⚙ Settings</a>
+  <a href="info.html">ℹ Info</a>
+  <a href="support.html">💬 Support</a>
+</div>
+
+
+	  
   <script>
     const toTopBtn = document.getElementById("toTopBtn");
 
