--- a/main.html
+++ b/main.html
@@ -129,7 +129,7 @@ function searchGames() {
 </header>
 
 	  <marquee style="background-color:rgba(0, 0, 0, 0.5); color:white;">
-////////////////////////S//E//A//R//C//H//E//N//G//I//N//E/////T//O//M//O//R//R//O//W/////////////////////////////////////////////////////////////////////////////
+LORD    					OF 			CHAOS.
 	  </marquee>
 	  
 	  <!--<form action="/search" method="get">
