--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="fun, stratagem, github, waterlemon">
         <!--thanks to @WilardzySenpai-->
     <link rel="stylesheet" href="css/loading-screen.css" />
-	  
+	<script src="javascript/main.js"></script>
    <!-- <script src="javascript/themes.js"></script>
    <script src="javascript/quote.js"></script>
    <script src="stratagems.js"></script>-->
