--- a/main.html
+++ b/main.html
@@ -111,7 +111,7 @@ LORD    					OF 			CHAOS.
         <input type="search" id="site-search" name="q" placeholder="This shit dont work twin😭💔">
         <button type="submit">🔍</button>
     </form> -->
-
+<main>
     <div id="container">
       <!--
       <div class="ok">   
@@ -653,6 +653,8 @@ LORD    					OF 			CHAOS.
       -->
       
     </div>
+		</main>
+	  
 <button id="toTopBtn">⬆ Top</button>
 <footer>
   <a href="sources.html">sources</a> 
