--- a/main.html
+++ b/main.html
@@ -102,9 +102,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
 
 </header>
 
-	  <marquee style="background-color:rgba(0, 0, 0, 0.5); color:white;">
-LORD    					OF 			CHAOS.
-	  </marquee>
+	  <marquee id="quote" style="background-color:rgba(0, 0, 0, 0.5); color:white;">...</marquee>
 	  
 	  <!--<form action="/search" method="get">
         <label for="site-search"></label>
