--- a/main.html
+++ b/main.html
@@ -537,25 +537,71 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
           <p>Made by Grace Asop & Roso Yani</p>
         </a>
       </div>		
-      <div class="">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>BlumgiBall</h3>
-          <p>Made by</p>
+          <h3>Blumgi Ball</h3>
+          <p>Made by Studio Blumgi</p>
+        </a>
+      </div>
+		
+      <div class="ok">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Blumgi Bloom</h3>
+          <p>Made by Studio Blumgi</p>
+        </a>
+      </div>		
+      <div class="ok">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Blumgi Castle</h3>
+          <p>Made by Studio Blumgi</p>
+        </a>
+      </div>
+		
+      <div class="ok">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Blumgi Dragon</h3>
+          <p>Made by Studio Blumgi</p>
+        </a>
+      </div>		
+      <div class="ok">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Blumgi Rocket</h3>
+          <p>Made by Studio Blumgi</p>
+        </a>
+      </div>
+		
+      <div class="ok">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Blumgi Slime</h3>
+          <p>Made by Studio Blumgi</p>
+        </a>
+      </div>		
+      <div class="ok">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Blumgi Soccer</h3>
+          <p>Made by Studio Blumgi</p>
         </a>
       </div>
 		
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
+          <h3>Title</h3>
           <p>Made by</p>
         </a>
       </div>		
+		
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
+          <h3>Title</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -563,14 +609,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
+          <h3>Title</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -578,14 +617,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
+          <h3>Title</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -593,46 +625,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>		
-		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>
-		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>
-		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>
-		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
+          <h3>Title</h3>
           <p>Made by</p>
         </a>
       </div>
 		<div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Blumgi</h3>
+          <h3>Title</h3>
           <p>Made by</p>
         </a>
       </div>		
