--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         <!--thanks to @WilardzySenpai-->
     <link rel="stylesheet" href="css/loading-screen.css" />
 	<script src="javascript/main.js"></script>
-	<script src="javascript/quote.js"></script>
+	<script src="javascript/quotes.js"></script>
    <!-- <script src="javascript/themes.js"></script>
    <script src="stratagems.js"></script>-->
     
