--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="yorokobi.png" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/themes.css" />
-  <meta name="author" content="unBlumgid by waterl3mon">
+  <meta name="author" content="jouyuss by waterl3mon">
   <meta name="keywords" content="fun, stratagem, github, waterlemon">
         <!--thanks to @WilardzySenpai-->
     <link rel="stylesheet" href="css/loading-screen.css" />
@@ -538,8 +538,8 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>		
       <div class="ok">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+        <a href="library/blumgi/index.html" >
+       <img src="library/blumgi/images/blumgi-ball.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Ball</h3>
           <p>Made by Studio Blumgi</p>
         </a>
@@ -547,14 +547,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
 		
       <div class="ok">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/blumgi/images/blumgi-bloom.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Bloom</h3>
           <p>Made by Studio Blumgi</p>
         </a>
       </div>		
       <div class="ok">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/blumgi/images/blumgi-castle.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Castle</h3>
           <p>Made by Studio Blumgi</p>
         </a>
@@ -562,14 +562,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
 		
       <div class="ok">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/blumgi/images/blumgi-dragon.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Dragon</h3>
           <p>Made by Studio Blumgi</p>
         </a>
       </div>		
       <div class="ok">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/blumgi/images/blumgi-rocket.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Rocket</h3>
           <p>Made by Studio Blumgi</p>
         </a>
@@ -577,14 +577,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
 		
       <div class="ok">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/blumgi/images/blumgi-slime.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Slime</h3>
           <p>Made by Studio Blumgi</p>
         </a>
       </div>		
       <div class="ok">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/blumgi/images/blumgi-soccer.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Blumgi Soccer</h3>
           <p>Made by Studio Blumgi</p>
         </a>
