--- a/main.html
+++ b/main.html
@@ -593,15 +593,31 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
-          <p>Made by</p>
+          <h3>Undertale</h3>
+          <p>Made by Toby Fox</p>
         </a>
       </div>		
 		
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>Deltarune</h3>
+          <p>Made by Toby Fox</p>
+        </a>
+      </div>
+		
+      <div class="">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Undertale:Yellow</h3>
+          <p>Fanmade version of undertale by Toby Fox</p>
+        </a>
+      </div>
+		
+      <div class="">
+        <a href="library/directory/index.html" >
+       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Fears to fathom</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -609,30 +625,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       <div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
-          <p>Made by</p>
-        </a>
-      </div>
-		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
-          <p>Made by</p>
-        </a>
-      </div>
-		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>kindergarden</h3>
           <p>Made by</p>
         </a>
       </div>
 		<div class="">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>Title</h3>
+          <h3>yumi nikki</h3>
           <p>Made by</p>
         </a>
       </div>		
